--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Ski resort snowfall forecast tracker"
 requires-python = ">=3.12"
 dependencies = [
     "requests>=2.31.0",
+    "requests-cache>=1.2.0",
     "python-dateutil>=2.8.2",
 ]
 
@@ -17,3 +18,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 packages = [{include = "powder"}]
+include = ["powder/data/*.json"]
