--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,9 +27,9 @@ jobs:
           python-version: '3.12'
       
       - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.7.1
+        run: |
+          pip install poetry
+          poetry --version
       
       - name: Install dependencies
         run: poetry install --no-interaction
